--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,14 @@
 	border: 1px solid black;
 }
 
+.mini-square{
+   
+	width: 10px;
+    height : 10px;
+	border: 1px solid black;
+
+}
+
 
 #front {
     position:fixed;
