--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,19 @@
     height : 50vh;
     overflow: auto
 }
+
+.triangle-up {
+	width: 0;
+	height: 0;
+	border-left: 30px solid transparent;
+	border-right: 30px solid transparent;
+	border-bottom: 60px solid red;
+}
+
+.triangle-down {
+	width: 0;
+	height: 0;
+	border-left: 30px solid transparent;
+	border-right: 30px solid transparent;
+	border-top: 60px solid red;
+}
