--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,12 @@
     height : 70px;
 	border: 1px solid black;
 }
+.circle2 {
+	width: 70px;
+    height : 70px;
+	border-radius : 50%;
+	border: 1px solid black;
+}
 
 .square3{
     width: 130px;
